<resources>
    <string name="app_name">Twitter Search</string>
    <string name="search_hint">Search</string>
    <string name="default_user_name">User Name</string>
    <string name="default_user_screen_name">\@user</string>
    <string name="default_tweet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque interdum rutrum sodales. Nullam mattis fermentum libero, non volutpat.</string>
    <string name="default_counter_number">0</string>
    <string name="hashtags">Hashtags</string>
    <string name="mentions">Mentions</string>
    <string name="links">Links</string>
    <string name="default_hashtags">#a, #b, #c</string>
    <string name="default_mentions">\@a, @b, @c</string>
    <string name="default_links">http://a.com, http://b.com, http://c.com</string>
    <string name="default_created_at">Set 19 2017 17:23</string>
    <string name="settings_title">Settings</string>
    <string name="settings_tweets">Tweets</string>
    <string name="settings_tweets_default">10</string>
    <string name="preference_file_key">com.lcleite.github.HelloApp.PREFERENCE_FILE_KEY</string>
    <string name="preference_max_tweets">com.lcleite.github.HelloApp.MAX_TWEETS</string>
    <string name="menu_settings">Settings</string>
    <string name="tweet_details_title">Tweet Details</string>
</resources>
