<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp">

    <ImageView
        android:id="@+id/ivUserProfile"
        android:layout_width="@dimen/profile"
        android:layout_height="@dimen/profile"
        android:layout_alignParentLeft="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/downloading_placeholder" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:content="@string/default_user_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@color/grayText"
        android:content="@string/default_user_screen_name"
        app:layout_constraintLeft_toRightOf="@+id/tvUserName"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserName"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:content="@string/default_tweet"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="2"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/ivUserProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

    <LinearLayout
        android:id="@+id/badgesContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvText"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/ivUserProfile"
        app:layout_constraintTop_toBottomOf="@+id/tvText">

        <ImageView
            android:id="@+id/ivHashtags"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/hashtag_icon" />

        <TextView
            android:id="@+id/tvHashtags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:content="@string/default_counter_number"
            android:textColor="@color/grayText" />

        <ImageView
            android:id="@+id/ivMentions"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/at_icon" />

        <TextView
            android:id="@+id/tvMentions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:content="@string/default_counter_number"
            android:textColor="@color/grayText" />

        <ImageView
            android:id="@+id/ivMediaPhoto"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/photo_icon" />

        <ImageView
            android:id="@+id/ivMediaVideo"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_margin="2dp"
            app:srcCompat="@drawable/video_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvText"
        android:textColor="@color/grayText"
        android:content="@string/default_created_at"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>