<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lcleite.github.com.helloandroidkotlin.view.TweetActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar">

        <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/userContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <ImageView
                    android:id="@+id/ivUserProfile"
                    android:layout_width="@dimen/profile"
                    android:layout_height="@dimen/profile"
                    android:layout_margin="16dp"
                    android:src="@drawable/downloading_placeholder"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:content="@string/default_user_name"
                    app:layout_constraintStart_toEndOf="@+id/ivUserProfile"
                    app:layout_constraintTop_toTopOf="@+id/ivUserProfile"
                    app:layout_constraintBottom_toTopOf="@id/tvUserScreenName"/>

                <TextView
                    android:id="@+id/tvUserScreenName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:content="@string/default_user_screen_name"
                    app:layout_constraintStart_toStartOf="@+id/tvUserName"
                    app:layout_constraintTop_toBottomOf="@+id/tvUserName"
                    app:layout_constraintBottom_toBottomOf="@+id/ivUserProfile"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:content="@string/default_created_at"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userContent"/>

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:content="@string/default_tweet"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreatedAt"/>

            <FrameLayout
                android:id="@+id/mediaFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvText">

                <ImageView
                    android:id="@+id/ivMediaPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:scaleType="fitCenter"/>

                <ImageButton
                    android:id="@+id/ibMediaPlay"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/video_play_icon"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/pbarLoading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyle"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/colorPrimary"/>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/hashtagsContainer"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediaFrame">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtags"/>

                <TextView
                    android:id="@+id/tvHashtags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mentionsContainer"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hashtagsContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mentions"/>

                <TextView
                    android:id="@+id/tvMentions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linksContainer"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mentionsContainer">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/links"/>

                <TextView
                    android:id="@+id/tvLinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
